Add webdriver update

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,4 @@ before_script:
   - npm install selenium-server-standalone-jar@3.7.1
   - mv ./node_modules/selenium-server-standalone-jar/jar/selenium-server-standalone-3.7.1.jar ./TestsProtractor/
   - npm install protractor
+  - webdriver-manager update
