--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+addons:
+  chrome: stable
 language: node_js
 node_js:
   - "node"
@@ -6,6 +8,9 @@ services:
   - mysql
 
 before_script:
+  - export CHROME_BIN=chromium-browser
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
   - npm install @angular/cli
   - npm install selenium-server-standalone-jar@3.7.1
   - mv ./node_modules/selenium-server-standalone-jar/jar/selenium-server-standalone-3.7.1.jar ./TestsProtractor/
