--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,11 @@ services:
   - mysql
 
 before_script:
+  # install chrome
   - export CHROME_BIN=chromium-browser
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
+  # install protractor
   - npm install selenium-server-standalone-jar@3.7.1
   - mv ./node_modules/selenium-server-standalone-jar/jar/selenium-server-standalone-3.7.1.jar ./TestsProtractor/
   - npm install protractor
