--- a/src/front/package.json
+++ b/src/front/package.json
@@ -3,8 +3,18 @@
   "version": "1.0.0",
   "main": "singlePage.js",
   "dependencies": {
+    "body-parser": "^1.18.2",
+    "connect-ensure-login": "^0.1.1",
+    "cookie-parser": "^1.4.3",
+    "debug": "^3.1.0",
+    "dotenv": "^4.0.0",
     "express": "^4.16.2",
+    "express-session": "^1.15.6",
+    "jade": "^1.11.0",
+    "morgan": "^1.9.0",
     "mysql": "^2.15.0",
+    "passport": "^0.4.0",
+    "passport-auth0": "^0.6.0",
     "typescript": "^2.6.1",
     "webpack": "^3.8.1"
   },
