--- a/GGHB/package.json
+++ b/GGHB/package.json
@@ -21,10 +21,14 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "body-parser": "^1.18.2",
     "core-js": "^2.4.1",
+    "express": "^4.16.2",
     "express-session": "^1.15.6",
+    "morgan": "^1.9.0",
     "mysql": "^2.15.0",
     "rxjs": "^5.5.2",
+    "serve-favicon": "^2.4.5",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
