--- a/GGHB/package.json
+++ b/GGHB/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gghb",
   "version": "0.0.0",
-  "license": "MIT",
+  "license": "GNU General Public License",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
