--- a/.travis.yml
+++ b/.travis.yml
@@ -13,14 +13,15 @@ before_install:
   - sh -e /etc/init.d/xvfb start
 
 install:
+  - cd GGHB
   # install protractor
   - npm install selenium-server-standalone-jar@3.7.1
-  - mv ./node_modules/selenium-server-standalone-jar/jar/selenium-server-standalone-3.7.1.jar ./src/testsE2E/
+  - mv ./node_modules/selenium-server-standalone-jar/jar/selenium-server-standalone-3.7.1.jar ./testsE2E/
   - npm install protractor
   # other installs
-  - npm install express
-  - npm install mysql
+  - npm install
 
 before_script:
   - webdriver-manager update --gecko false
-  - node src/front/script.js &
+  - npm start
+#  - node src/front/script.js &
