--- a/GGHB/package.json
+++ b/GGHB/package.json
@@ -1,46 +1,42 @@
 {
   "name": "gghb",
   "version": "0.0.0",
-  "license": "GNU General Public License",
+  "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "node server.js & ;; ng serve &",
+    "start": "ng serve",
     "build": "ng build",
-    "test": "protractor testsE2E/protractor.conf.js",
+    "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.0.4",
-    "@angular/cli": "^1.5.5",
-    "@angular/common": "^5.0.4",
-    "@angular/compiler": "^5.0.4",
-    "@angular/core": "^5.0.4",
-    "@angular/forms": "^5.0.4",
-    "@angular/http": "^5.0.4",
-    "@angular/platform-browser": "^5.0.4",
-    "@angular/platform-browser-dynamic": "^5.0.4",
-    "@angular/router": "^5.0.4",
-    "angular": "^1.5.11",
-    "body-parser": "^1.18.2",
-    "cookie-parser": "^1.4.3",
+    "@angular/animations": "^5.0.0",
+    "@angular/common": "^5.0.0",
+    "@angular/compiler": "^5.0.0",
+    "@angular/core": "^5.0.0",
+    "@angular/forms": "^5.0.0",
+    "@angular/http": "^5.0.0",
+    "@angular/platform-browser": "^5.0.0",
+    "@angular/platform-browser-dynamic": "^5.0.0",
+    "@angular/router": "^5.0.0",
+    "bootstrap": "^4.0.0-beta.2",
     "core-js": "^2.4.1",
-    "express": "^4.16.2",
-    "express-session": "^1.15.6",
-    "morgan": "^1.9.0",
+    "jquery": "^3.2.1",
+    "jsonwebtoken": "^8.1.0",
     "mysql": "^2.15.0",
+    "popper.js": "^1.12.3",
     "rxjs": "^5.5.2",
-    "serve-favicon": "^2.4.5",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^5.0.4",
-    "@angular/language-service": "^5.0.4",
+    "@angular/cli": "1.5.0",
+    "@angular/compiler-cli": "^5.0.0",
+    "@angular/language-service": "^5.0.0",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
-    "apache-server-configs": "^2.15.0",
     "codelyzer": "~3.2.0",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
@@ -48,9 +44,9 @@
     "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "^1.1.1",
+    "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "^5.1.2",
+    "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
     "typescript": "~2.4.2"
