--- a/GGHB/package.json
+++ b/GGHB/package.json
@@ -4,7 +4,7 @@
   "license": "GNU General Public License",
   "scripts": {
     "ng": "ng",
-    "start": "node server.js & ;; ng serve &",
+    "start": "node server.js & ;; ng serve",
     "build": "ng build",
     "test": "protractor testsE2E/protractor.conf.js",
     "lint": "ng lint",
