--- a/GGHB/package.json
+++ b/GGHB/package.json
@@ -22,11 +22,11 @@
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
     "bootstrap": "^4.0.0-beta.2",
-    "core-js": "^2.4.1",
+    "core-js": "^2.5.3",
     "jquery": "^3.2.1",
     "jsonwebtoken": "^8.1.0",
     "mysql": "^2.15.0",
-    "popper.js": "^1.12.3",
+    "popper.js": "^1.13.0",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
@@ -36,7 +36,7 @@
     "@angular/language-service": "^5.0.0",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
+    "@types/node": "^6.0.93",
     "codelyzer": "~3.2.0",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
