--- a/GGHB/package.json
+++ b/GGHB/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^5.0.0",
     "bootstrap": "^4.0.0-beta.2",
     "core-js": "^2.5.3",
+    "express": "^4.16.2",
     "jquery": "^3.2.1",
     "jsonwebtoken": "^8.1.0",
     "mysql": "^2.15.0",
