--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,17 +5,18 @@ networks:
     driver: bridge
 
 services:
-  server:
-    container_name: serverNFront
-    build: GGHB/
-
-  mysql:
-    container_name: bd
+  mysql_gghb:
+    container_name: bd_gghb
     image: mysql
     environment:
       - MYSQL_ALLOW_EMPTY_PASSWORD=yes
+    ports:
+      - 3306:3306
     volumes:
-      - mysql_data:/var/lib/mysql
+      - ./GGHB/BD:/docker-entrypoint-initdb.d
 
-volumes:
-  mysql_data:
+  server_gghb:
+    container_name: serverNFront_gghb
+    build: GGHB/
+    ports:
+      - 8080:8080
